syntax = "proto3";
option csharp_namespace = "CecoChat.Config.Contracts";
package CecoChat.Config.Contracts;
import "google/protobuf/timestamp.proto";

message ConfigElement {
  string name = 1;
  string value = 2;
  google.protobuf.Timestamp version = 3;
}
