syntax = "proto3";
option csharp_namespace = "CecoChat.Config.Contracts";
package CecoChat.Config.Contracts;
import "ConfigElement.proto";

service Config {
  rpc GetConfigElements(GetConfigElementsRequest) returns (GetConfigElementsResponse);
}

message GetConfigElementsRequest {
  string config_section = 1;
}

message GetConfigElementsResponse {
  repeated ConfigElement elements = 1;
}
